2013-08-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.c (adc_buf): Remove.
	(ep_fill_initial_string): Call noise_source_continuous_test.
	(ep_init): Follow the change of adc_start_conversion.
	(ep_fill_wbuf_v): New name and new argument V, remove FLIP.
	(ep_process): Access CRC unit from here.  Correct calling
	noise_source_continuous_test for the last byte of output.
	(rng): Handle error of ADC.

	* src/adc_stm32f103.c (adc_mode, adc_ptr, adc_size): Remove.
	(adc_buf): Make it public.
	(adc_start_conversion): Change arguments.
	(adc_lld_serve_rx_interrupt, adc_wait): Remove.
	(adc_wait_completion): New with error code.

2013-08-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c (reset): Remove unneeded & for FT0, FT1, and FT2.

2013-06-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in: Change the placement of stacks.

	* src/neug.c (rng): Handle interrupt by this thread.
	(neug_mode_select): Mutual exclusion for mode change.

	* src/adc_stm32f103.c (adc_wait): New.
	(adc_start): Don't create thread.
	(adc_intr_thread): Remove.

	* src/neug.c: Rename from random.c.

2013-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_intr): Avoid interrupt masking by application.

2013-06-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c: Update for Chopstx.

	* src/sys.c: Portable version (not for ChibiOS).  Version 2.0.
	* src/sys.h (clock_init, gpio_init): New.

	* src/stm32f103.h: New.

	* src/neug.ld.in: Declare stack sizes.

	* src/main.c: Update for Chopstx.
	(usb_intr): Thread for interrupt handling.
	(Vector90): Remove.
	(EP1_IN_Callback): Use mutex and cond.
	(event_flag_init, event_flag_waitone, event_flag_signal): New.
	(led_blinker): Use event flag of our own.
	(main): Use mutex and cond.  Use cancel and join.

	* src/configure: Update for Chopstx.
	(target): Defaults to FST_01.

	* src/adc_stm32f103.c (STM32_ADC_ADC1_IRQ_PRIORITY): Remove.
	(NEUG_DMA_MODE_CRC32): Add MINC, memory address increment.
	(adc_init): Handle RCC initialization for ADC.